Quinto commit do CSS

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 :root {
-   --dark blue:#262E38;
+   --dark-blue :#262E38;
    --light-grey: #969FAD;
    --medium-grey: #7C8798;
    --orange: #FC7614;
@@ -32,7 +32,7 @@ body{
 }
 
 .estrela {
-    background-color: var(--very-dark-blue);
+    background-color: var(--dark-blue);
     width: 48px;
     height: 48px;
 
@@ -54,4 +54,27 @@ body{
     color: var(--light-grey);
     font-size: 15px;
     line-height: 24px;
+    margin-bottom: 24px;
+}
+
+.botoes {
+    display: flex;
+    justify-content:space-between;
+}
+
+.botoes button {
+    width: 51px;
+    height: 51px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    border-radius: 50%;
+    border:none;
+    color: var(--medium-grey);
+    background-color: var(--dark-blue)
+    
+}
+
+.botoes button:hover {
+    
 }
